# carmnist

./: carmnist.toml  create images with "Bounding Box".py  curved_motion.py  digit_in_motion.py  extract images mnist database  extract_images_mnist_database.py  load_mnist_image.py  numbers in black frame.py  pyproject.toml  readme.md  sign_motion.py  simple_movement.py  square_in_motion.py  todo  transform_image.py
