[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "carmnist"
version = "0.0.1"
description = "A simulator to create a video dataset of MNIST digits floating by. 
author = "Olaf Booij" 
co_author = "Olivier van der Kroef" 

dependencies = [
    'Keras',
    'numpy',
    'random',
    'PIL',
    'Tensorflow',        
]
